# Lumen

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  desktop.bat  desktop.py  docker-compose.yml  index.html  lumen.py  main.py  ocr_img.py  package-lock.json  package.json  pyproject.toml  requirements.txt  review.diff  run.bat  run.ps1  start.bat  tmp_check_path.py  weather.bat  weather.py  weather_to_obsidian.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.sisyphus/plans/: background-memory-review.md  cognee-integration.md  external-data-phase2a.md  pydantic-ai-migration.md  resume-upload.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/backend/: config.py  logging_config.py  main.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/feed/: README.md  analyzer.py  config.py  fetcher.py  server.py  store.py
apps/knowledge/: README.md  __init__.py  config.py  embeddings.py  server.py
backend/: config.py  db_migrations.py  main.py  model_registry.py
backend/agent/: event_handlers.py  pydantic_agent.py  tools.py
backend/api/: __init__.py
backend/application/: knowledge_service.py  memory_service.py
backend/core/: config.py  db.py  migrations.py  startup.py
backend/data_sources/: routes.py
backend/ingestion/: __init__.py  connector.py  pipeline.py  retry.py  store.py
backend/memory/: classifier.py  cognify_loop.py  facade.py  relational_store.py  search.py  searcher.py  semantic_store.py  snapshot.py
channels/: base.py  config_store.py  manager.py  models.py  provider.py
channels/cli/: ui.ts  (+3 more)
channels/desktop/src-tauri/: Cargo.toml  tauri.conf.json
channels/desktop/src-tauri/src/: lib.rs
core/: agent.py  config.py  db.py  migrations.py  startup.py  vector_store.py
docs/: api-contracts.md  architecture.md  cli-tui-typescript.md  course-report.md  frontend-design.md  index.md  liu-master-design-20260521-093458.md  opencode-cli-architecture.md  project-context.md  project-overview.md  pydanticai-llms-full.txt  spec-multiprovider.md  功能模块与交互设计_AI职业规划智能体.md  总体规划_AI职业规划智能体系统.md  竞品分析报告_AI职业规划智能体系统.md  系统架构设计_AI职业规划智能体.md  计算机学生职业规划智能体系统_需求分析报告.md  记忆层架构变更.md  记忆架构方案分析.md
eval/: __init__.py  bench_memory.py  dataset.py  ingest.py  metrics.py  qa_runner.py  runtime.py
lib/: identity.py  model_registry.py  models_dev.py
observatory/: index.html
scripts/: _dump.py  _dump_telegram.py  _inspect_akasha.py  _probe_conv.py  _probe_dns.py  _probe_embedding.py  _probe_sessions.py  _recent.py  _recent2.py  _replay_prompt.py  _schema.py  _verify.py  eval_akasha_quality.py  migrate_demo_user_to_me.py  migrate_tools.py  migrate_user_id_to_me.py  replace_ctx.py  replace_deps.py  test_akasha_smoke.py  validate_observations.py
shared/: errors.py  llm_usage.py  logging.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_agent_loop.py  test_agent_runner.py  test_api_health.py  test_builtin_provider.py  test_bus.py  test_chat_api.py  test_context_cache_history.py  test_context_fence.py  test_data_sources.py  test_delegate_tool.py  test_event_bus.py  test_external_data.py  test_file_edit.py  test_housekeeping.py  test_integration_e2e.py  test_jd_api.py  test_memory_chinese_eval.py  test_memory_classifier.py  test_memory_dedup.py  test_memory_e2e.py  test_memory_manager.py  test_memory_markdown.py  test_memory_provider.py  test_memory_tools.py  test_parsers.py  test_path_safety.py  test_providers.py  test_shell_tool.py  test_snapshot.py  test_target_api.py  test_telegram_channel.py  test_tool_discovery.py  test_tool_policies.py  test_tool_registry_order.py  test_understanding.py  test_vision_tool.py  test_web_channel.py
(+584 files in other folders)
