[project]
name = "lumen"
version = "0.1.0"
description = "Lumen — 一个真正认识你的 AI 伙伴"
requires-python = ">=3.11"

[tool.ruff]
# Ruff 配置：lint + format 一体化
target-version = "py311"
line-length = 120
exclude = [
    ".claude/skills",
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "src-tauri/target",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (由 formatter 处理)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise from in except (存量代码，逐步修复)
    "SIM108", # ternary operator (可读性优先)
    "RUF001", # ambiguous unicode in string (中文标点)
    "RUF002", # ambiguous unicode in docstring (中文括号)
    "RUF003", # ambiguous unicode in comment (中文标点)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "lib", "server", "shared"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # 脚本需要在 sys.path.insert 后导入
"tests/*" = ["E402"]    # 测试文件需要在 pytest.importorskip 后导入
"requirements.txt" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
